--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/limbook
 spring.datasource.username=root
 spring.datasource.password=1234
 server.port=8082
+
+session.setMaxInactiveInterval(1800);
