로그인기능 수정중.................

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=1234
 server.port=8085
 
-session.setMaxInactiveInterval(1800);=
+session.setMaxInactiveInterval(1800);
